--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
         <div class="futures-images">
             <img src="images/architect.png" alt="">
-            <button>
+            <button class="info">
                 <h1 class="btn">10 + Year</h1>
                 Experience
             </button>
@@ -112,6 +112,42 @@
 
     </section>
     <!-- main section part-3 end -->
+    <!-- articale part start -->
+    <article>
+        <div class="fact">
+            <div class="fact-heading">
+                <h2>Some Facts</h2>
+                <div class="fact-content">
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                </div>
+            </div>
+            <div class="fact-card">
+                <div class="card-icon">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h2>54</h2>
+                    <p>Award Warning</p>
+                </div>
+                <div class="card-icon">
+                    <img src="images/icons/projects.png" alt="">
+                    <h2>1458</h2>
+                    <p>Project Finished</p>
+                </div>
+                <div class="card-icon">
+                    <img src="images/icons/customers.png" alt="">
+                    <h2>590</h2>
+                    <p>Client Work</p>
+                </div>
+                <div class="card-icon">
+                    <img src="images/icons/email.png" alt="">
+                    <h2>22578</h2>
+                    <p>Email Send</p>
+                </div>
+
+
+            </div>
+        </div>
+    </article>
+    <!-- articale part end -->
 
 
 
