added to sponser img

--- a/index.html
+++ b/index.html
@@ -148,6 +148,35 @@
         </div>
     </article>
     <!-- articale part end -->
+    <!-- article part one start -->\
+    <article>
+        <div class="sponsers">
+            <h1 class="sponser-heading">Our Sponspors</h1>
+            <div class="sponsers-content">
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+
+        </div>
+       <div class="sponser">
+            <div class="sppnsers-images">
+                <img src="images/sponsors/amazon.png" alt="">
+            </div>
+            <div class="sppnsers-images">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+            <div class="sppnsers-images">
+                <img src="images/sponsors/google.png" alt="">
+            </div>
+            <div class="sppnsers-images">
+                <img src="images/sponsors/spotify.png" alt="">
+            </div>
+            <div class="sppnsers-images">
+                <img src="images/sponsors/telerama.png" alt="">
+            </div>
+       </div>
+    </article>
+    <!-- article part one end -->
+
 
 
 
