added to footer section

--- a/index.html
+++ b/index.html
@@ -176,6 +176,12 @@
        </div>
     </article>
     <!-- article part one end -->
+    
+    <!-- footer section start -->
+    <footer>
+        <p>All rights reserved copyright@2023 startup landing page design</p>
+    </footer>
+    <!-- footer section end -->
 
 
 
