added to font size

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     
     <!-- footer section start -->
     <footer>
-        <p>All rights reserved copyright@2023 startup landing page design</p>
+        <p class="footer-content">All rights reserved copyright@2023 startup landing page design</p>
     </footer>
     <!-- footer section end -->
 
